--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     generate-ddl: true  # 테스트 데이터 넣을 수 있음
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
       # create는 DB 테이블이 없으면 알아서 만들어줌 → 최초에만 쓰거나 개발 환경에서만 사용
       # 운영 환경에서는 데이터가 다 날아갈 수 있기 때문에 validate로 검증만
     properties:
